Projects Icons Menu Responsive

--- a/projects.html
+++ b/projects.html
@@ -38,9 +38,11 @@
       <p class="w3-xlarge w3-center">Services Offered</p>
   </header>
 
-  <div class='w3-content w3-center'>
+
     <!-- Kate - December 1, 2020 -->
     <!-- inspiration from http://tresreistech.com/gis-consulting-and-services/-->
+    <!-- menu for large screen-->
+  <div class='w3-content w3-center w3-hide-medium w3-hide-small'>
     <div class='flex'>
       <div class='quarterWidth'>Web Design</div>
       <div class='quarterWidth'>Geovisualization</div>
@@ -49,16 +51,16 @@
     </div>
 
     <div class='flex'>
-      <a href='#webdesign' class='quarterWidth'>
+      <a href='#webdesign' class='quarterWidth '>
         <img src='images/icons_webdesign125.png' width='125' height='110'>        
       </a>
-      <a href='#geovis' class='quarterWidth'>
+      <a href='#geovis' class='quarterWidth '>
         <img src='images/icons_geovis125.png' width='125' height='100'>    
       </a>
-      <a href='#spatial' class='quarterWidth'>
+      <a href='#spatial' class='quarterWidth '>
         <img src='images/icons_spatial125.png' width='125' height='103'>
       </a>
-      <a href='geodesy' class='quarterWidth'>
+      <a href='geodesy' class='quarterWidth '>
        <img  src='images/icons_geodesy125.png' width='125' height='120'>
       </a>
     </div>
@@ -71,20 +73,137 @@
     </div>
 
     <div class='flex'>
-      <a href='#database' class='quarterWidth'> 
+      <a href='#database' class='quarterWidth '> 
         <img src='images/icons_database125.png' width='125' height='100'>
       </a> 
-      <a href='#remote' class = 'quarterWidth'>
+      <a href='#remote' class = 'quarterWidth '>
         <img src='images/icons_remote125.png' width='125' height='119'>
       </a>
       <a href='#programming' class='quarterWidth'>
         <img src='images/icons_programming125.png' width='125' height='90'>
       </a>
-      <a href='#survey' class='quarterWidth'>
+      <a href='#survey' class='quarterWidth '>
         <img src='images/icons_survey125.png' width='125' height='126'>
       </a>
     </div>
   </div>
+
+<!-- end menu large screen-->
+
+<!-- menu medium screen-->
+<div class='w3-content w3-center w3-hide-large w3-hide-small'>
+  <div class='flex w3-hide-large w3-hide-small'>
+    <div class='thirdWidth'>Web Design</div>
+    <div class='thirdWidth'>Geovisualization</div>
+    <div class='thirdWidth'>Spatial Analysis</div>
+  </div>
+
+  <div class='flex w3-hide-large w3-hide-small'>
+    <a href='#webdesign' class='thirdWidth '>
+      <img src='images/icons_webdesign125.png' width='125' height='110'>        
+    </a>
+    <a href='#geovis' class='thirdWidth '>
+      <img src='images/icons_geovis125.png' width='125' height='100'>    
+    </a>
+    <a href='#spatial' class='thirdWidth '>
+      <img src='images/icons_spatial125.png' width='125' height='103'>
+    </a>
+  </div>
+
+  <div class='flex w3-hide-large w3-hide-small'>
+    <div class='thirdWidth'>Geodesy</div>
+    <div class='thirdWidth'>Database Modeling</div>
+    <div class='thirdWidth'>Remote Sensing</div>
+  </div>
+
+  <div class='flex w3-hide-large w3-hide-small'>
+    <a href='geodesy' class='thirdWidth '>
+      <img  src='images/icons_geodesy125.png' width='125' height='120'>
+    </a>
+    <a href='#database' class='thirdWidth '> 
+      <img src='images/icons_database125.png' width='125' height='100'>
+    </a> 
+    <a href='#remote' class = 'thirdWidth '>
+      <img src='images/icons_remote125.png' width='125' height='119'>
+    </a>
+  </div>
+
+
+  <div class='flex w3-hide-large w3-hide-small'>
+    <div class='halfWidth'>Programming and Automation</div>
+    <div class='halfWidth'>Surveying</div>
+  </div>
+
+  <div class='flex w3-hide-large w3-hide-small'>
+    <a href='#programming' class='halfWidth width='125''>
+      <img src='images/icons_programming125.png' width='125' height='90'>
+    </a>
+    <a href='#survey' class='halfWidth '>
+      <img src='images/icons_survey125.png' width='125' height='126'>
+    </a>
+  </div>
+</div>
+<!-- end menu medium screen-->
+
+<!-- menu on small screen-->
+<div class='w3-content w3-center w3-hide-large w3-hide-medium'>
+  <div class='flex w3-hide-large w3-hide-medium'>
+    <div class='halfWidth'>Web Design</div>
+    <div class='halfWidth'>Geovisualization</div>
+  </div>
+
+  <div class='flex w3-hide-large w3-hide-medium'>
+    <a href='#webdesign' class='halfWidth '>
+      <img src='images/icons_webdesign125.png' width='125' height='110'>        
+    </a>
+    <a href='#geovis' class='halfWidth '>
+      <img src='images/icons_geovis125.png' width='125' height='100'>    
+    </a>
+  </div>
+
+  <div class='flex w3-hide-large w3-hide-medium'>
+    <div class='halfWidth'>Spatial Analysis</div>
+    <div class='halfWidth'>Geodesy</div>
+  </div>
+
+  <div class='flex w3-hide-large w3-hide-medium'>
+    <a href='#spatial' class='halfWidth '>
+      <img src='images/icons_spatial125.png' width='125' height='103'>
+    </a>
+    <a href='geodesy' class='halfWidth '>
+      <img  src='images/icons_geodesy125.png' width='125' height='120'>
+    </a>
+  </div>
+
+  <div class='flex w3-hide-large w3-hide-medium'>
+    <div class='halfWidth'>Database Modeling</div>
+    <div class='halfWidth'>Remote Sensing</div>
+  </div>
+
+  <div class='flex w3-hide-large w3-hide-medium'>
+    <a href='#database' class='halfWidth '> 
+      <img src='images/icons_database125.png' width='125' height='100'>
+    </a> 
+    <a href='#remote' class = 'halfWidth '>
+      <img src='images/icons_remote125.png' width='125' height='119'>
+    </a>
+  </div> 
+
+  <div class='flex w3-hide-large w3-hide-medium'>
+    <div class='halfWidth'>Programming and Automation</div>
+    <div class='halfWidth'>Surveying</div>
+  </div>
+
+  <div class='flex w3-hide-large w3-hide-medium'>
+    <a href='#programming' class='halfWidth width='125''>
+      <img src='images/icons_programming125.png' width='125' height='90'>
+    </a>
+    <a href='#survey' class='halfWidth '>
+      <img src='images/icons_survey125.png' width='125' height='126'>
+    </a>
+  </div>
+</div>
+<!--end menu small screen-->
 
   <!-- GEOM 101-->
   <div class="w3-container">
@@ -139,10 +258,14 @@
   <!-- GEOM 104-->
   <div class="w3-container">
     <div class="w3-content">
-      <div class class='anchor'>
+      <div class='anchor'>
         <h1 id='geodesy'>Geodesy</h1>
         <h5>Sub heading</h5>
-        <p>Example paragraph</p>
+        <p>
+          <ul>
+            <li>Database creation or optimization</li>
+          </ul>
+        </p>
       </div>
     </div>
   </div>
