removed some subtitles for now, cleaned up stuff

--- a/projects.html
+++ b/projects.html
@@ -210,7 +210,7 @@
     <div class="w3-content">
       <div>
         <h1 id='webdesign' class='anchor'>Web Design</h1>
-        <h5>Sub heading</h5>
+        <!--h5>Sub heading</h5-->
         <p>
           <ul>
             <li>Website design even more impressive than this</li>
@@ -226,7 +226,7 @@
     <div class="w3-content">
       <div>
         <h1 id='geovis' class='anchor'>Geovisualization</h1>
-        <h5>Sub heading</h5>
+        <!--h5>Sub heading</h5-->
         <p>
           <ul>
             <li>Reference or Thematic mapping solutions</li>
@@ -243,7 +243,7 @@
     <div class="w3-content">
       <div>
         <h1 id='spatial' class='anchor'>Spatial Analysis</h1>
-        <h5>Sub heading</h5>
+        <!--h5>Sub heading</h5-->
         <p>
           <ul>
             <li>Digitizing</li>
@@ -260,10 +260,10 @@
     <div class="w3-content">
       <div class='anchor'>
         <h1 id='geodesy'>Geodesy</h1>
-        <h5>Sub heading</h5>
+        <!--h5>Sub heading</h5-->
         <p>
           <ul>
-            <li>Database creation or optimization</li>
+            <li></li>
           </ul>
         </p>
       </div>
@@ -275,7 +275,7 @@
     <div class="w3-content">
       <div>
         <h1 id='database' class='anchor'>Database Modeling</h1>
-        <h5>Sub heading</h5>
+        <!--h5>Sub heading</h5-->
         <p>
           <ul>
             <li>Database creation or improvement</li>
@@ -290,7 +290,7 @@
     <div class="w3-content">
       <div>
         <h1 id='remote' class='anchor'>Remote Sensing</h1>
-        <h5>Sub heading</h5>
+        <!--h5>Sub heading</h5-->
         <p>
           <ul>
             <li></li>
@@ -307,7 +307,7 @@
     <div class="w3-content">
       <div>
         <h1 id='programming' class='anchor'>Programming and Automation</h1>
-        <h5>Sub heading</h5>
+        <!--h5>Sub heading</h5-->
         <ul>
           <li></li>
           <li></li>
@@ -322,7 +322,7 @@
     <div class="w3-content">
       <div>
         <h1 id='survey' class='anchor'>Surveying</h1>
-        <h5>Sub heading</h5>
+        <!--h5>Sub heading</h5-->
         <ul>
           <li>Creation of survey plans on AutoCAD from survey notes</li>
         </ul>
