--- a/people.html
+++ b/people.html
@@ -44,7 +44,11 @@
     <div class= "bioblock">
       <img class="w3-image bioimage" src="images/TestImage.png"  alt="Test Image" width="200" height="300">
       <h4>Kate</h4>
-      <p class="biotext">Insert Bio Text Here Insert Bio Text Here Insert Bio Text Here Insert Bio Text Here</p>
+      <p class="biotext">Kate has an MSc from Carleton University and thinks that geology is the schist. Her favourite mineral is Halite because she too is a bit
+        salty. Kate spent 11 days in the desert, collecting 50 rocks for a 300 page thesis which would take her 2.5 years and one
+        dangerous lab accident to complete. She is now pursuing a career in GIS to distance herself from deadly chemicals and to instead
+        spend all of her time sitting behind a computer. Just like Carbon, Kate shines under pressure. 
+        When Kate grows up she hopes to become a GIS Applications Specialist.</p>
     </div>
     <div class= "bioblock">
       <img class="w3-image bioimage" src="images/TestImage.png"  alt="Test Image" width="200" height="300">
