Projects: space bottom, will improve content

--- a/projects.html
+++ b/projects.html
@@ -89,7 +89,7 @@
   </div>
 
 <!-- end menu large screen-->
-
+<!--Mark December 5-->
 <!-- menu medium screen-->
 <div class='w3-content w3-center w3-hide-large w3-hide-small'>
   <div class='flex w3-hide-large w3-hide-small'>
@@ -130,15 +130,15 @@
 
 
   <div class='flex w3-hide-large w3-hide-small'>
-    <div class='halfWidth'>Programming and Automation</div>
-    <div class='halfWidth'>Surveying</div>
+    <div class='halfWidth w3-left'>Programming and Automation</div>
+    <div class='halfWidth w3-text-right'>Surveying</div>
   </div>
 
   <div class='flex w3-hide-large w3-hide-small'>
-    <a href='#programming' class='halfWidth width='125''>
+    <a href='#programming' class='halfWidth'>
       <img src='images/icons_programming125.png' width='125' height='90'>
     </a>
-    <a href='#survey' class='halfWidth '>
+    <a href='#survey' class='halfWidth'>
       <img src='images/icons_survey125.png' width='125' height='126'>
     </a>
   </div>
@@ -204,7 +204,7 @@
   </div>
 </div>
 <!--end menu small screen-->
-
+<!--end Mark-->
   <!-- GEOM 101-->
   <div class="w3-container">
     <div class="w3-content">
@@ -213,7 +213,7 @@
         <!--h5>Sub heading</h5-->
         <p>
           <ul>
-            <li>Website design even more impressive than this</li>
+            <li>Website design even more impressive than this one</li>
             <li>Responsive websites for desktop and mobile environments</li>
           </ul>
         </p>
@@ -230,8 +230,8 @@
         <p>
           <ul>
             <li>Reference or Thematic mapping solutions</li>
-            <li></li>
-            <li></li>
+            <li>Suitable for reports, presentations, or displays</li>
+            <li>Physical or digital medium</li>
           </ul>
         </p>
       </div>
@@ -249,6 +249,7 @@
             <li>Digitizing</li>
             <li>Model building and workflow design</li>
             <li>Mulit-criteria analysis</li>
+            <li>Whatever you'd like us to do, we can probably do it</li>            
           </ul>
         </p>
       </div>
@@ -263,7 +264,8 @@
         <!--h5>Sub heading</h5-->
         <p>
           <ul>
-            <li></li>
+            <li>Can explain the different between spheroids, ellipsoids, and geoids</li>
+            <li>I need to catch up on the last week of class, to see what else we can do</li>
           </ul>
         </p>
       </div>
@@ -279,6 +281,7 @@
         <p>
           <ul>
             <li>Database creation or improvement</li>
+            <li>Attempt to reduce normal form violation</li>
           </ul>
         </p>
       </div>
@@ -293,9 +296,8 @@
         <!--h5>Sub heading</h5-->
         <p>
           <ul>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>Georeferencing of imagery</li>
+            <li>Filtering</li>
           </ul>
         </p>
       </div>
@@ -309,22 +311,20 @@
         <h1 id='programming' class='anchor'>Programming and Automation</h1>
         <!--h5>Sub heading</h5-->
         <ul>
-          <li></li>
-          <li></li>
-          <li></li>
+          <li>Python programming, applied to GIS or perhaps elsewhere</li>
         </ul>
       </div>
     </div>
   </div>
 
   <!-- SURV 21-->
-  <div class="w3-container">
+  <div class="w3-container bottom-anchor">
     <div class="w3-content">
       <div>
         <h1 id='survey' class='anchor'>Surveying</h1>
         <!--h5>Sub heading</h5-->
         <ul>
-          <li>Creation of survey plans on AutoCAD from survey notes</li>
+          <li>Creation of survey plans on AutoCAD from survey measurements</li>
         </ul>
       </div>
     </div>
