--- a/people.html
+++ b/people.html
@@ -42,7 +42,7 @@
 <div class='w3-content w3-center w3-hide-small'>
   <div class='flex-people'>
     <div class= "bioblock">
-      <img class="w3-image bioimage" src="images/TestImage.png"  alt="Test Image" width="200" height="300">
+      <img class="w3-image bioimage" src="images/KateHeadshot.jpg"  alt="Kate" width="200" height="300">
       <h4>Kate</h4>
       <p class="biotext">Kate has an MSc from Carleton University and thinks that geology is the schist. Her favourite mineral is Halite because she too is a bit
         salty. Kate spent 11 days in the desert, collecting 50 rocks for a 300 page thesis which would take her 2.5 years and one
