light grey formatting

--- a/people.html
+++ b/people.html
@@ -42,6 +42,7 @@
 <div class='w3-content w3-center w3-hide-small'>
   <div class='flex-people'>
     <div class= "bioblock">
+      <!-- edited by Kate -->
       <img class="w3-image bioimage" src="images/KateHeadshot.jpg"  alt="Kate" width="200" height="300">
       <h4>Kate</h4>
       <p class="biotext">Kate has an MSc from Carleton University and thinks that geology is the schist. Her favourite mineral is Halite because she too is a bit
@@ -50,7 +51,8 @@
         spend all of her time sitting behind a computer. Just like Carbon, Kate shines under pressure. 
         When Kate grows up she hopes to become a GIS Applications Specialist.</p>
     </div>
-    <div class= "bioblock">
+    <!-- End of Kate edits -->
+    <div class= "w3-light-grey bioblock">
       <img class="w3-image bioimage" src="images/TestImage.png"  alt="Test Image" width="200" height="300">
       <h4>Mark</h4>
       <p class="biotext">Insert Bio Text Here Insert Bio Text Here Insert Bio Text Here Insert Bio Text Here</p>
@@ -67,6 +69,7 @@
 <div class='w3-content-mobile w3-center w3-hide-large w3-hide-medium'>
   <div class='flex-people'>
     <div class= "bioblock">
+      <!-- Edited by Kate -->
       <img class="w3-image " src="images/KateHeadshot.jpg"  alt="Kate" width="200" height="300">
       <h4>Kate</h4>
       <p class="biotext">Kate has an MSc from Carleton University and thinks that geology is the schist. Her favourite mineral is Halite because she too is a bit
@@ -75,7 +78,8 @@
         spend all of her time sitting behind a computer. Just like Carbon, Kate shines under pressure. 
         When Kate grows up she hopes to become a GIS Applications Specialist.</p>
     </div>
-    <div class= "bioblock">
+    <!-- End of Kate edits -->
+    <div class= "w3-light-grey bioblock">
       <img class="w3-image" src="images/TestImage.png"  alt="Test Image" width="200" height="300">
       <h4>Mark</h4>
       <p class="biotext">Insert Bio Text Here Insert Bio Text Here Insert Bio Text Here Insert Bio Text Here</p>
