--- a/projects.html
+++ b/projects.html
@@ -222,7 +222,7 @@
   </div>
 
   <!-- GEOM 102-->
-  <div class="w3-container">
+  <div class="w3-light-grey w3-container">
     <div class="w3-content">
       <div>
         <h1 id='geovis' class='anchor'>Geovisualization</h1>
@@ -257,7 +257,7 @@
   </div>
 
   <!-- GEOM 104-->
-  <div class="w3-container">
+  <div class="w3-light-grey w3-container">
     <div class="w3-content">
       <div class='anchor'>
         <h1 id='geodesy'>Geodesy</h1>
@@ -289,7 +289,7 @@
   </div>
 
   <!-- GEOM 66-->
-  <div class="w3-container">
+  <div class="w3-light-grey w3-container">
     <div class="w3-content">
       <div>
         <h1 id='remote' class='anchor'>Remote Sensing</h1>
@@ -318,7 +318,7 @@
   </div>
 
   <!-- SURV 21-->
-  <div class="w3-container bottom-anchor">
+  <div class="w3-light-grey w3-container bottom-anchor">
     <div class="w3-content">
       <div>
         <h1 id='survey' class='anchor'>Surveying</h1>
