remove light grey formatting on people

--- a/people.html
+++ b/people.html
@@ -52,7 +52,7 @@
         When Kate grows up she hopes to become a GIS Applications Specialist.</p>
     </div>
     <!-- End of Kate edits -->
-    <div class= "w3-light-grey bioblock">
+    <div class= "bioblock">
       <img class="w3-image bioimage" src="images/TestImage.png"  alt="Test Image" width="200" height="300">
       <h4>Mark</h4>
       <p class="biotext">Insert Bio Text Here Insert Bio Text Here Insert Bio Text Here Insert Bio Text Here</p>
@@ -79,7 +79,7 @@
         When Kate grows up she hopes to become a GIS Applications Specialist.</p>
     </div>
     <!-- End of Kate edits -->
-    <div class= "w3-light-grey bioblock">
+    <div class= "bioblock">
       <img class="w3-image" src="images/TestImage.png"  alt="Test Image" width="200" height="300">
       <h4>Mark</h4>
       <p class="biotext">Insert Bio Text Here Insert Bio Text Here Insert Bio Text Here Insert Bio Text Here</p>
