index page text

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <!-- edits made by Kazuto Nov 21, 22, 23 -->
 <!-- edits made by Mark Nov 24, cleaning up unused classes -->
 
+<!-- Template header inspired by: http://triton-env.com/-->
+
 <!-- Owner: Kate -->
 <!DOCTYPE html>
 <html lang="en">
@@ -48,8 +50,8 @@
   <div class="w3-container">
     <div class="w3-content">
       <div>
-        <h1>About Us</h1>
-        <h5>Cloud 9 Consulting</h5>
+        <h1>Welcome</h1>
+        <h5>sub heading</h5>
 
         <p>Cloud 9 Consulting is a GIS consulting company based in Ontario. We provide consulting services to 
           private industry and the public service sector. We have a range of specialties including Remote Sensing and Image Analysis,
@@ -73,10 +75,12 @@
       </div>
 
       <div>
-        <h1>Page 2</h1>
-        <h5 class="w3-padding-32">Sub heading</h5>
+        <h1>About Us</h1>
+        <h5 class="w3-padding-32">sub heading</h5>
 
-        <p>Example paragraph</p>
+        <p>Formed in 2020, Cloud 9 Consulting was born out of a desire to pass GEOM 101 Web Design and Programming. Our three
+          founders have extensive backgrounds in the fields of geology and ecology, and bring this expertise to each consulting project. 
+        </p>
       </div>
     </div>
   </div>
