added Kazuto headshot, fixed syntax errors in project.html

--- a/people.html
+++ b/people.html
@@ -26,13 +26,13 @@
     </div>
   <!-- modified by Kazuto-->
   <!-- Navbar on small screens -->
-  <div class='w3-right'>
-    <div id="SmallNavBar" class="w3-bar-block w3-light-grey w3-hide w3-hide-large w3-hide-medium w3-large">
-      <a href="people.html" class="w3-show w3-button w3-padding-large">People</a>
-      <a href="projects.html" class="w3-show w3-button w3-padding-large">Projects</a>
+    <div class='w3-right'>
+      <div id="SmallNavBar" class="w3-bar-block w3-light-grey w3-hide w3-hide-large w3-hide-medium w3-large">
+        <a href="people.html" class="w3-show w3-button w3-padding-large">People</a>
+        <a href="projects.html" class="w3-show w3-button w3-padding-large">Projects</a>
+      </div>
     </div>
-  </div>
-  <!-- end of Kazuto edit-->
+    <!-- end of Kazuto edit-->
   </div>
 <!--End of Owner: Kate -->
 
@@ -65,7 +65,7 @@
       <p class="biotext">Insert Bio Text Here Insert Bio Text Here Insert Bio Text Here Insert Bio Text Here</p>
     </div>
     <div class= "bioblock">
-      <img class="w3-image bioimage" src="images/TestImage.png"  alt="Test Image" width="200" height="300">
+      <img class="w3-image bioimage" src="images/KazutoHeadshot.jpg"  alt="Test Image" width="200" height="300">
       <h4>Kazuto</h4>
       <p class="biotext">Insert Bio Text Here Insert Bio Text Here Insert Bio Text Here Insert Bio Text Here</p>
     </div>
