--- a/projects.html
+++ b/projects.html
@@ -27,13 +27,14 @@
 
   <!-- modified by Kazuto; navbar now displays on right side of screen, elements are vertically aligned-->
   <!-- Navbar on small screens -->
-  <div class='w3-right'>
-    <div id="SmallNavBar" class="w3-bar-block w3-light-grey w3-hide w3-hide-large w3-hide-medium w3-large">
-      <a href="people.html" class="w3-show w3-button w3-padding-large">People</a>
-      <a href="projects.html" class="w3-show w3-button w3-padding-large">Projects</a>
+    <div class='w3-right'>
+      <div id="SmallNavBar" class="w3-bar-block w3-light-grey w3-hide w3-hide-large w3-hide-medium w3-large">
+        <a href="people.html" class="w3-show w3-button w3-padding-large">People</a>
+        <a href="projects.html" class="w3-show w3-button w3-padding-large">Projects</a>
+      </div>
     </div>
+    <!-- end of Kazuto edit-->
   </div>
-  <!-- end of Kazuto edit-->
 <!--End of Owner: Kate -->
 
   <header class="w3-container w3-center w3-padding-62-16">
