--- a/people.html
+++ b/people.html
@@ -65,9 +65,12 @@
       <p class="biotext">Insert Bio Text Here Insert Bio Text Here Insert Bio Text Here Insert Bio Text Here</p>
     </div>
     <div class= "bioblock">
-      <img class="w3-image bioimage" src="images/KazutoHeadshot.jpg"  alt="Test Image" width="200" height="300">
+      <img class="w3-image bioimage" src="images/KazutoHeadshot2.jpg"  alt="Kazuto" width="200" height="300">
       <h4>Kazuto</h4>
-      <p class="biotext">Insert Bio Text Here Insert Bio Text Here Insert Bio Text Here Insert Bio Text Here</p>
+      <p class="biotext">Kazuto received a BSc in geology from Queen's University and has 3 years of experience in the mineral exploration industry. 
+        Recently he has discovered a passion for programming and GIS, mainly because you can avoid being eaten alive by blackflies if you are indoors.
+        Likes: rock climbing, camping, piano, gaming, beer, tea. Dislikes: raisin cookies, people pronouncing "gif" with a j sound, stepping in a small puddle of water on your kitchen floor and getting your sock wet. Now you have to go change one sock.
+      </p>
     </div>
   </div>
 </div> 
