added Kazuto bio to small screen format

--- a/people.html
+++ b/people.html
@@ -65,13 +65,16 @@
       <p class="biotext">Insert Bio Text Here Insert Bio Text Here Insert Bio Text Here Insert Bio Text Here</p>
     </div>
     <div class= "bioblock">
+      <!-- edited by Kazuto-->
       <img class="w3-image bioimage" src="images/KazutoHeadshot2.jpg"  alt="Kazuto" width="200" height="300">
       <h4>Kazuto</h4>
       <p class="biotext">Kazuto received a BSc in geology from Queen's University and has 3 years of experience in the mineral exploration industry. 
         Recently he has discovered a passion for programming and GIS, mainly because you can avoid being eaten alive by blackflies if you are indoors.
-        Likes: rock climbing, camping, piano, gaming, beer, tea. Dislikes: raisin cookies, people pronouncing "gif" with a j sound, stepping in a small puddle of water on your kitchen floor and getting one sock wet. Awful experience. Wouldn't wish it on anyone.
+        Likes: rock climbing, camping, piano, gaming, beer, tea. Dislikes: raisin cookies, people pronouncing "gif" with a j sound, stepping in a small 
+        puddle of water on your kitchen floor and getting one sock wet. Awful experience. Wouldn't wish it on anyone.
       </p>
     </div>
+    <!-- end of Kazuto edit-->
   </div>
 </div> 
 
@@ -95,10 +98,15 @@
       <p class="biotext">Insert Bio Text Here Insert Bio Text Here Insert Bio Text Here Insert Bio Text Here</p>
     </div>
     <div class= "bioblock">
-      <img class="w3-image" src="images/TestImage.png"  alt="Test Image" width="200" height="300">
+      <!-- edited by Kazuto-->
+      <img class="w3-image" src="images/KazutoHeadshot2.jpg"  alt="Test Image" width="200" height="300">
       <h4>Kazuto</h4>
-      <p class="biotext">Insert Bio Text Here Insert Bio Text Here Insert Bio Text Here Insert Bio Text Here</p>
+      <p class="biotext">Kazuto received a BSc in geology from Queen's University and has 3 years of experience in the mineral exploration industry. 
+        Recently he has discovered a passion for programming and GIS, mainly because you can avoid being eaten alive by blackflies if you are indoors.
+        Likes: rock climbing, camping, piano, gaming, beer, tea. Dislikes: raisin cookies, people pronouncing "gif" with a j sound, stepping in a small 
+        puddle of water on your kitchen floor and getting one sock wet. Awful experience. Wouldn't wish it on anyone.</p>
     </div>
+    <!-- end of Kazuto edit-->
   </div>
 </div>
 <!-- End Mark edit-->
