removed all instances of "w3-" from element names in all files

--- a/projects.html
+++ b/projects.html
@@ -17,32 +17,32 @@
 <body>
 <!-- Owner: Kate -->
   <!-- Navbar -->
-  <div class="w3-top">
-    <div class="w3-bar w3-card w3-left-align w3-large w3-white">
-      <a class="burger w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-blue w3-large w3-white" href="javascript:void(0);" onclick="dropMenu()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-      <a href="index.html" class="w3-bar-item w3-button w3-padding-large w3-hover-white">Home</a>
-      <a href="people.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">People</a>
-      <a href="projects.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Projects</a>
+  <div class="top">
+    <div class="bar card left-align large white">
+      <a class="burger button hide-medium hide-large right padding-large hover-blue large white" href="javascript:void(0);" onclick="dropMenu()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
+      <a href="index.html" class="bar-item button padding-large hover-white">Home</a>
+      <a href="people.html" class="bar-item button hide-small padding-large hover-white">People</a>
+      <a href="projects.html" class="bar-item button hide-small padding-large hover-white">Projects</a>
 
     </div>
 
   <!-- modified by Kazuto; navbar now displays on right side of screen, elements are vertically aligned-->
   <!-- Navbar on small screens -->
-    <div class='w3-right'>
-      <div id="SmallNavBar" class="w3-bar-block w3-light-grey w3-hide w3-hide-large w3-hide-medium w3-large">
-        <a href="people.html" class="w3-show w3-button w3-padding-large">People</a>
-        <a href="projects.html" class="w3-show w3-button w3-padding-large">Projects</a>
+    <div class='right'>
+      <div id="SmallNavBar" class="bar-block light-grey hide hide-large hide-medium large">
+        <a href="people.html" class="show button padding-large">People</a>
+        <a href="projects.html" class="show button padding-large">Projects</a>
       </div>
     </div>
     <!-- end of Kazuto edit-->
   </div>
 <!--End of Owner: Kate -->
 
-  <header class="w3-container w3-center w3-padding-62-16">
-    <img class="w3-image" src="images/Cloud9Consulting4.jpg" alt="Cloud 9 Consulting" width="1500" height="523">
-    <div class="w3-display-middle">
+  <header class="container center padding-62-16">
+    <img class="image" src="images/Cloud9Consulting4.jpg" alt="Cloud 9 Consulting" width="1500" height="523">
+    <div class="display-middle">
       <!-- Owner: Kate -->
-      <h1 class="headertext w3-margin">What We Do</h1>
+      <h1 class="headertext margin">What We Do</h1>
     </div>
   </header>
 
@@ -50,7 +50,7 @@
     <!-- Kate - December 1, 2020 -->
     <!-- inspiration from http://tresreistech.com/gis-consulting-and-services/-->
     <!-- menu for large screen-->
-  <div class='w3-content w3-center w3-hide-medium w3-hide-small'>
+  <div class='content center hide-medium hide-small'>
     <div class='flex'>
       <div class='quarterWidth'>Web Design</div>
       <div class='quarterWidth'>Geovisualization</div>
@@ -99,14 +99,14 @@
 <!-- end menu large screen-->
 <!--Mark December 5-->
 <!-- menu medium screen-->
-<div class='w3-content w3-center w3-hide-large w3-hide-small'>
-  <div class='flex w3-hide-large w3-hide-small'>
+<div class='content center hide-large hide-small'>
+  <div class='flex hide-large hide-small'>
     <div class='thirdWidth'>Web Design</div>
     <div class='thirdWidth'>Geovisualization</div>
     <div class='thirdWidth'>Spatial Analysis</div>
   </div>
 
-  <div class='flex w3-hide-large w3-hide-small'>
+  <div class='flex hide-large hide-small'>
     <a href='#webdesign' class='thirdWidth '>
       <img src='images/icons_webdesign125.png' width='125' height='110'>        
     </a>
@@ -118,13 +118,13 @@
     </a>
   </div>
 
-  <div class='flex w3-hide-large w3-hide-small'>
+  <div class='flex hide-large hide-small'>
     <div class='thirdWidth'>Geodesy</div>
     <div class='thirdWidth'>Database Modeling</div>
     <div class='thirdWidth'>Remote Sensing</div>
   </div>
 
-  <div class='flex w3-hide-large w3-hide-small'>
+  <div class='flex hide-large hide-small'>
     <a href='geodesy' class='thirdWidth '>
       <img  src='images/icons_geodesy125.png' width='125' height='120'>
     </a>
@@ -137,12 +137,12 @@
   </div>
 
 
-  <div class='flex w3-hide-large w3-hide-small'>
-    <div class='halfWidth w3-left'>Programming and Automation</div>
-    <div class='halfWidth w3-text-right'>Surveying</div>
+  <div class='flex hide-large hide-small'>
+    <div class='halfWidth left'>Programming and Automation</div>
+    <div class='halfWidth text-right'>Surveying</div>
   </div>
 
-  <div class='flex w3-hide-large w3-hide-small'>
+  <div class='flex hide-large hide-small'>
     <a href='#programming' class='halfWidth'>
       <img src='images/icons_programming125.png' width='125' height='90'>
     </a>
@@ -154,13 +154,13 @@
 <!-- end menu medium screen-->
 
 <!-- menu on small screen-->
-<div class='w3-content w3-center w3-hide-large w3-hide-medium'>
-  <div class='flex w3-hide-large w3-hide-medium'>
+<div class='content center hide-large hide-medium'>
+  <div class='flex hide-large hide-medium'>
     <div class='halfWidth'>Web Design</div>
     <div class='halfWidth'>Geovisualization</div>
   </div>
 
-  <div class='flex w3-hide-large w3-hide-medium'>
+  <div class='flex hide-large hide-medium'>
     <a href='#webdesign' class='halfWidth '>
       <img src='images/icons_webdesign125.png' width='125' height='110'>        
     </a>
@@ -169,12 +169,12 @@
     </a>
   </div>
 
-  <div class='flex w3-hide-large w3-hide-medium'>
+  <div class='flex hide-large hide-medium'>
     <div class='halfWidth'>Spatial Analysis</div>
     <div class='halfWidth'>Geodesy</div>
   </div>
 
-  <div class='flex w3-hide-large w3-hide-medium'>
+  <div class='flex hide-large hide-medium'>
     <a href='#spatial' class='halfWidth '>
       <img src='images/icons_spatial125.png' width='125' height='103'>
     </a>
@@ -183,12 +183,12 @@
     </a>
   </div>
 
-  <div class='flex w3-hide-large w3-hide-medium'>
+  <div class='flex hide-large hide-medium'>
     <div class='halfWidth'>Database Modeling</div>
     <div class='halfWidth'>Remote Sensing</div>
   </div>
 
-  <div class='flex w3-hide-large w3-hide-medium'>
+  <div class='flex hide-large hide-medium'>
     <a href='#database' class='halfWidth '> 
       <img src='images/icons_database125.png' width='125' height='100'>
     </a> 
@@ -197,12 +197,12 @@
     </a>
   </div> 
 
-  <div class='flex w3-hide-large w3-hide-medium'>
+  <div class='flex hide-large hide-medium'>
     <div class='halfWidth'>Programming and Automation</div>
     <div class='halfWidth'>Surveying</div>
   </div>
 
-  <div class='flex w3-hide-large w3-hide-medium'>
+  <div class='flex hide-large hide-medium'>
     <a href='#programming' class='halfWidth width='125''>
       <img src='images/icons_programming125.png' width='125' height='90'>
     </a>
@@ -214,8 +214,8 @@
 <!--end menu small screen-->
 <!--end Mark-->
   <!-- GEOM 101-->
-  <div class="w3-container">
-    <div class="w3-content">
+  <div class="container">
+    <div class="content">
       <div>
         <h1 id='webdesign' class='anchor'>Web Design</h1>
         <!--h5>Sub heading</h5-->
@@ -230,8 +230,8 @@
   </div>
 
   <!-- GEOM 102-->
-  <div class="w3-light-grey w3-container">
-    <div class="w3-content">
+  <div class="light-grey container">
+    <div class="content">
       <div>
         <h1 id='geovis' class='anchor'>Geovisualization</h1>
         <!--h5>Sub heading</h5-->
@@ -247,8 +247,8 @@
   </div>
 
   <!-- GEOM 103-->
-  <div class="w3-container">
-    <div class="w3-content">
+  <div class="container">
+    <div class="content">
       <div>
         <h1 id='spatial' class='anchor'>Spatial Analysis</h1>
         <!--h5>Sub heading</h5-->
@@ -265,8 +265,8 @@
   </div>
 
   <!-- GEOM 104-->
-  <div class="w3-light-grey w3-container">
-    <div class="w3-content">
+  <div class="light-grey container">
+    <div class="content">
       <div class='anchor'>
         <h1 id='geodesy'>Geodesy</h1>
         <!--h5>Sub heading</h5-->
@@ -281,8 +281,8 @@
   </div>
 
   <!-- GEOM 65-->
-  <div class="w3-container">
-    <div class="w3-content">
+  <div class="container">
+    <div class="content">
       <div>
         <h1 id='database' class='anchor'>Database Modeling</h1>
         <!--h5>Sub heading</h5-->
@@ -297,8 +297,8 @@
   </div>
 
   <!-- GEOM 66-->
-  <div class="w3-light-grey w3-container">
-    <div class="w3-content">
+  <div class="light-grey container">
+    <div class="content">
       <div>
         <h1 id='remote' class='anchor'>Remote Sensing</h1>
         <!--h5>Sub heading</h5-->
@@ -313,8 +313,8 @@
   </div>
 
   <!-- GEOM 67-->
-  <div class="w3-container">
-    <div class="w3-content">
+  <div class="container">
+    <div class="content">
       <div>
         <h1 id='programming' class='anchor'>Programming and Automation</h1>
         <!--h5>Sub heading</h5-->
@@ -326,8 +326,8 @@
   </div>
 
   <!-- SURV 21-->
-  <div class="w3-light-grey w3-container bottom-anchor">
-    <div class="w3-content">
+  <div class="light-grey container bottom-anchor">
+    <div class="content">
       <div>
         <h1 id='survey' class='anchor'>Surveying</h1>
         <!--h5>Sub heading</h5-->
@@ -338,13 +338,13 @@
     </div>
   </div>
 
-  <div class="w3-container w3-black w3-center">
-    <h1 class="w3-margin w3-xlarge">Footer</h1>
+  <div class="container black center">
+    <h1 class="margin xlarge">Footer</h1>
   </div>
 
   <!-- Footer -->
-  <footer class="w3-container w3-center">  
-    <div class="w3-xlarge" class='anchor'>
+  <footer class="container center">  
+    <div class="xlarge" class='anchor'>
   </div>
   <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
   </footer>
