Added new element "burger-item" which sets text-align to left for burger menu drop down items

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
   <!-- modified by Kazuto; navbar now displays on right side of screen, elements are vertically aligned-->
   <!-- Navbar on small screens -->
     <div class='right'>
-      <div id="SmallNavBar" class="bar-block light-grey hide hide-large hide-medium large">
-        <a href="people.html" class="show button padding-large">People</a>
-        <a href="projects.html" class="show button padding-large">Projects</a>
+      <div id="SmallNavBar" class="left-align bar-block light-grey hide hide-large hide-medium large">
+        <a href="people.html" class="show burger-item padding-large">People</a>
+        <a href="projects.html" class="show burger-item padding-large">Projects</a>
       </div>
     </div>
     <!-- end of Kazuto edit-->
