--- a/people.html
+++ b/people.html
@@ -21,16 +21,16 @@
     <div class="bar card left-align large white">
       <a class="burger button hide-medium hide-large right padding-large hover-blue large white" href="javascript:void(0);" onclick="dropMenu()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
       <a href="index.html" class="bar-item button padding-large hover-white">Home</a>
-      <a href="people.html" class="bar-item button hide-small padding-large hover-white">People</a>
-      <a href="projects.html" class="bar-item button hide-small padding-large hover-white">Projects</a>
+      <a href="people.html" class="bar-item burger-item hide-small padding-large hover-white">People</a>
+      <a href="projects.html" class="bar-item burger-item hide-small padding-large hover-white">Projects</a>
 
     </div>
   <!-- modified by Kazuto-->
   <!-- Navbar on small screens -->
     <div class='right'>
       <div id="SmallNavBar" class="bar-block light-grey hide hide-large hide-medium large">
-        <a href="people.html" class="show button padding-large">People</a>
-        <a href="projects.html" class="show button padding-large">Projects</a>
+        <a href="people.html" class="show burger-item padding-large">People</a>
+        <a href="projects.html" class="show burger-item padding-large">Projects</a>
       </div>
     </div>
     <!-- end of Kazuto edit-->
